
#define cmake version
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#1.define project and target
SET(PROJECT_NAME lfs)
SET(TARGET_NAME lfs)
PROJECT(${PROJECT_NAME})

#2.define make flags and install path
#SET(PROJECT_BUILD_TYPE "Debug")
SET(PROJECT_BUILD_TYPE "Release")
SET(CMAKE_BUILD_TYPE ${PROJECT_BUILD_TYPE})
SET(CMAKE_CONFIGURATION_TYPES ${PROJECT_BUILD_TYPE})

#3.define include and lib
INCLUDE_DIRECTORIES(
../lua-5.3.3/src
)

LINK_DIRECTORIES(
${CMAKE_CURRENT_SOURCE_DIR}/../lua-5.3.3/bin
)

#4.group sourse
AUX_SOURCE_DIRECTORY(src FILES_SRC)

#5.add executable or library
ADD_LIBRARY(${TARGET_NAME} SHARED ${FILES_SRC})
TARGET_LINK_LIBRARIES(${TARGET_NAME} liblua)

#SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin")
#SET(LIBRARY_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin")

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/bin")
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/bin")

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/bin")
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/bin")
